--- a/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
+++ b/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
