--- a/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
+++ b/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Warrior.cs" />
+    <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
