--- a/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
+++ b/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Archer.cs" />
+    <Compile Include="Battle.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Game.cs" />
