--- a/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
+++ b/SlutprojektP2/SlutprojektP2/SlutprojektP2.csproj
@@ -50,7 +50,6 @@
     <Compile Include="Game.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Map.cs" />
-    <Compile Include="Message.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -59,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
